Add pdf-specific reference images for fill-alpha-pattern.
These capture the current poppler output, (rather than the
ideal output). We're still waiting for poppler to start
using cairo gradients before this test will run through
cleanly. And even with these new reference images, there's
still some translation variance, so the -25 tests still
fail.

--- a/test/README
+++ b/test/README
@@ -234,6 +234,7 @@ Here are the reported poppler bugs and the tests they affect:
 Poppler doesn't correctly handle gradients with transparency
 https://bugs.freedesktop.org/show_bug.cgi?id=12144
 --------------------------------------------------
+fill-alpha-pattern
 gradient-alpha
 linear-gradient
 trap-clip
