Add pdf-specific reference images for gradient-constant-alpha.
Like many other gradient tests, we're just capturing the buggy
output of poppler here, (though this time I *did* verify with
Adobe acroread that our PDF output seems to be correct).

--- a/test/README
+++ b/test/README
@@ -236,6 +236,7 @@ https://bugs.freedesktop.org/show_bug.cgi?id=12144
 --------------------------------------------------
 fill-alpha-pattern
 gradient-alpha
+gradient-constant-alpha
 linear-gradient
 trap-clip
 linear-gradient
